# patent_mcp_server

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_OVERVIEW.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  README.md  TEST_COVERAGE_MATRIX.md  TEST_SUITE_PROPOSAL.md  TEST_SUITE_QUICKSTART.md  patents.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/plans/: 2026-05-18-reenable-ptab-odp-plan.md  ptab-field-findings.md
json/: app_14412875_metadata.json  patent_9876543_data.json
src/patent_mcp_server/: config.py  constants.py  patents.py  prompts.py  resources.py
src/patent_mcp_server/google/: __init__.py  bigquery_client.py
src/patent_mcp_server/patentsview/: patentsview_client.py
src/patent_mcp_server/uspto/: api_uspto_gov.py  enriched_citation_client.py  litigation_client.py  office_action_client.py  ppubs_uspto_gov.py  ptab_client.py  tm_assignment_client.py  tmsearch_client.py  tsdr_client.py
src/patent_mcp_server/util/: errors.py  logging.py  response.py  validation.py
test/: conftest.py  test_patents.py  test_ptab_integration.py  test_tools.py  test_tools_pytest.py  test_trademark_integration.py
test/config/: test_config.py  test_data.json
test/fixtures/: api_responses.py  google_bigquery_responses.py  ppubs_responses.py  tm_assignment_responses.py  tmsearch_responses.py  tsdr_responses.py
test/integration/: test_google_bigquery.py
test/test_results/: download_applications_post.json  get_app.json  get_app_adjustment.json  get_app_assignment.json  get_app_associated_documents.json  get_app_attorney.json  get_app_continuity.json  get_app_documents.json  get_app_foreign_priority.json  get_app_metadata.json  get_app_transactions.json  get_dataset_product.json  get_status_codes.json  get_status_codes_post.json  ppubs_download_patent_pdf.json  ppubs_get_patent_by_number.json  ppubs_search_applications.json  ppubs_search_patents.json  search_applications.json  search_applications_post.json  search_datasets.json  test_summary.json
test/unit/: test_api_client.py  test_bigquery_client.py  test_errors.py  test_odp_search.py  test_office_action_client.py  test_patentsview_client.py  test_ppubs_client.py  test_ptab_client.py  test_ptab_tools.py  test_response_util.py  test_tm_assignment_client.py  test_tmsearch_client.py  test_trademark_tools.py  test_tsdr_client.py  test_unavailable_tools.py  test_validation.py
test/utils/: assertions.py  helpers.py
