[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-mcp-server"
version = "0.2.2"
description = "Model Context Protocol server for USPTO patent data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h2>=4.2.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["patent_mcp_server", "patent_mcp_server.uspto", "patent_mcp_server.util"]

[tool.setuptools.package-data]
patent_mcp_server = ["json/*.json"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
patent-mcp-server = "patent_mcp_server.patents:main"
